--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "node-js-demo",
+  "name": "kaisen-cli",
+  "bin":{
+    "cli":"cli.js"
+  },
+  "files": ["*.js"],
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
