--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "kaisen-cli",
   "bin":{
-    "cli":"cli.js"
+    "t":"./cli.js"
   },
   "files": ["*.js"],
-  "version": "1.0.0",
+  "version": "1.0.6",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
